Se agregó un saludo a la raza.

--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,7 @@
     <z>
         Heme aquí pinineando otra vez.
         Pinino tras pinino se hace camino al pininear.
+        ¡Salve raza!
     </z>
 </body>
 </html>
